styles.css
*, *::before, *::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    /* outline: 1px solid black; */
}

html {
    background-color: rgb(200, 200, 200);
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 62.5%;
    /* FONTSIZE TRICK-- 1 rem = 10 px here, usually 1 rem = 16px */
    min-height: 100vh;
    max-height: 100vh;
    caret-color: transparent;
}

body {
    font-size: 2rem;
    /* font-size: calc(1.5rem + 0.4vw); */
    /* FONTSIZE TRICK-- 1 rem = 10 px here, usually 1 rem = 16px */
    /* FONTSIZE - Adding the 0.4 is for responsivity */    
}

li {
    list-style-type: none;
    display: inline-block;
}

li img {
    display: inline-block;
}

a {
    text-decoration: none;
    color:initial;
}

strong {
    font-size:xx-large;
    display: block;
}

button {
    cursor:pointer;
}

img, svg {
    display: block;
    max-width: 100%;
}
/* ---------------------------------------------------- */
/*--------------- SIDEBAR BEGINS HERE------------------ */
.sidebar {
    background-color: rgb(39, 119, 184);
    grid-column: 1 / 2;
    grid-row: 1 / 3;
    z-index: 2;
    display:grid;
    align-content: start;
    padding-left: 2rem;
    padding-right: 2rem;
}

.stickySide { /* This is a wrapper for the 'sticky' positioning */
    display:grid;
    align-content: start;
    row-gap: 6rem;
    position: sticky;
    top: 0;
    padding-top: 3rem;
}

.sidebarTitle, .sidebarUL1, .sidebarUL2 {
    display: grid;
    grid-template-columns: 1fr 4fr;
    column-gap: 10%;    
    row-gap: 2rem;
    align-items: center;
}

/*--------------- SIDEBAR ENDS HERE------------------ */
/*----------------------------------------------------*/

/* -------------------------------------------------- */
/*------------------- MEDIA QUERIES ----------------- */

@media only screen and (max-width: 1024px){
    .sidebar li, .sidebar strong {
        display: none;
    }
    .sidebarTitle, .sidebarUL1, .sidebarUL2 {
        grid-template-columns: 1fr;
             
    }    
}
/*------------- MEDIA QUERIES END HERE--------------- */
/* -------------------------------------------------- */

.container {
    display: grid;
    grid-template-columns: max-content minmax(64rem, 5fr); /*making this first col fixed means img wont auto resize*/
    grid-template-rows: 1fr 4fr;
    max-height: 100vh;
    max-width: 100vw;
    }

.mainContent {
    grid-column: 2 / 3;
    grid-row: 2 / 3;
    display: grid;
    gap: 2rem;
    padding: 2rem;
    max-width: 100vw;
    grid-template-columns: 1fr 32rem;
}

section {
    display:grid;
    gap: 2rem;
    grid-template-columns: repeat(auto-fill, minmax(32rem, 3fr));
   
}

.mainRightDiv {
    display: grid;
    gap: 5rem;
    align-content: start;
}

.mainRightDiv .card div{
    display: grid;
    gap: 1rem;
}

hr {
    margin-top: 1rem;
    opacity: 0.5;
}

/* ---------------- CARDS --------------  */
.card {
    background-color: aliceblue;
    box-shadow: 5px 5px 5px -5px rgba(50, 50, 50, 0.5);
    border-radius: 8px;
    padding: 2rem;
    display: grid;
    gap: 1rem;
}

.cards .card {
    border-left: 1rem solid rgb(208, 160, 69);
    max-height: 35rem;
}

.card img {
    width: 3rem;
    display: inline;
    margin: 0 1rem;
}

.cardIcons {
   justify-self: end;   
}
/* ---------------- CARDS ---------------  */


/* -------------------------------------------------- */
/* ------------------- HEADER SECTION ---------------  */
.header {
    background-color: rgb(246, 251, 251);
    grid-column: 2 / 3;
    grid-row: 1 / 2;
    box-shadow: 1px 2px 20px 1px rgba(50, 50, 50, 0.5);
    display: grid;
    min-height: 18.8rem;
    grid-template-rows: 9.4rem 9.4rem;
    grid-template-columns: 1fr 32rem;
}

.head1, .head2, .head3, .head4 {
    display: grid;
    place-items: center;
    grid-template: 1fr / 1fr 1fr 1fr;
    gap: 1rem;
    /* grid-template-rows / grid-template-columns values */
}

.head2, .head4 {
    width: 100%;    
    padding-right: 2rem;
    gap: 2rem;
    margin-left: -4rem;
}

form {
    grid-column: 1 / 4;
    display: grid;
    grid-template-columns: 4rem 1fr;
    gap: 2rem;
    padding: 0 4rem;
    width: 100%;
    max-width: 100rem;
    margin-right: auto;
}

form button {
    width: 5rem;
    background-color: transparent;
    border-color: transparent;
    border-radius: 40rem;
    display: grid;
    place-items: center;
}

input {
    border-color: transparent;
    border-radius: 40rem;
    padding-left: 2ch;
    width: 100%;
    background-color: rgba(128, 128, 128, 0.1);
}

.head4 button {
    background-color: rgb(39, 119, 184);
    border-color: transparent;
    font-size:1.5rem;
    letter-spacing: 0.1rem;
    color: white;
    border-radius: 22px;
    transition: box-shadow 0.1s;
    padding: 1ch 2ch;
}

.head4 button:hover {
    background-color: rgb(32, 96, 147);
    box-shadow:1px 1px 1px 1px rgb(50,50,50,0.5);
}

.head4 button:active {
    transform: translateY(1px);
    background-color: rgb(32, 96, 147);
}

.head3 strong{
    display: block;
}

.head3 img {
    min-width: 50px;
}

.head3 img {
    min-width: 80px;
}

.head3 {
    max-width: 32rem;
    padding-left: 4rem;
}

img[src$=".jpg"] {
    border-radius: 50%;
    border: 1px solid black;    
}

/* ------------------- HEADER SECTION --------------  */
/* -------------------------------------------------- */

